# qunta

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  task.md  tsconfig.base.json
apps/desktop/: package.json  tsconfig.json
apps/desktop-ui/: index.html  package.json  tsconfig.json
apps/desktop-ui/src/: AgentTimeline.tsx  App.tsx  DetailsPanels.tsx  DiffViewer.tsx  FileTree.tsx  GitCheckpointView.tsx  PromptComposer.tsx  SettingsPanel.tsx  TerminalLogPanel.tsx  VerificationCommands.tsx  desktop-commands.ts  main.tsx  mock-data.ts  runner-config.ts  styles.css  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  diagnostics_bundle.rs  lib.rs  main.rs
crates/agent-runner/: Cargo.toml
crates/desktop-core/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/workspace-check/: Cargo.toml
docs/: architecture.md  billing-contract.md  cloud-api-contract.md  codex-runtime-contract.md  codex-sidecar.md  coding-standards.md  desktop-app-configuration.md  desktop-packaging.md  e2e-smoke.md  llm-gateway-contract.md  private-beta-checklist.md  private-beta-release-notes.md  product-requirements.md  release-process.md  repo-layout.md  security-threat-model.md  ui-information-architecture.md  workspace-safety.md
services/api/: package.json
services/llm-gateway/: package.json  tsconfig.json
tests/e2e/: mvp-smoke.mjs
tools/: check-file-limits.mjs  check-markdown.mjs  check-task-queue.mjs  check-workspace-layout.mjs  package-desktop.mjs  prepare-beta.mjs
(+53 files in other folders)
