[package]
name = "qunta-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true
authors = ["bestmaa"]
description = "Native Tauri shell for Qunta."

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
agent-runner = { path = "../../../crates/agent-runner" }
desktop-core = { path = "../../../crates/desktop-core" }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }

[lib]
name = "qunta_desktop"
path = "src/lib.rs"

[[bin]]
name = "qunta-desktop"
path = "src/main.rs"

[lints]
workspace = true
